# wesmart_lpr

./: .gitignore  README.md  evaluate.py  main.py
config/: Base-CenterMask-ResNet.yaml  Base-CenterMask-VoVNet.yaml  Base-RCNN-VoVNet-FPN.yaml  centermask_V_57_eSE_FPN_ms_3x.yaml  centermask_V_99_eSE_dcn_FPN_ms_3x.yaml  centermask_X_101_FPN_ms_3x.yaml  faster_rcnn_V_39_FPN_3x.yaml  mask_rcnn_R_50_FPN_3x.yaml
data_handler/: dataset_handler.py
models/center_mask/: __init__.py  evaluate.py  model.py  train.py  vovnet_config.py
models/centermask/: performance.py  train_net.py
models/centermask/centermask/: __init__.py
models/centermask/centermask/modeling/: __init__.py
models/centermask/centermask/modeling/centermask/: mask_head.py
models/mask_rcnn/: evaluate.py  main.py  model.py  performance.py  predict.py
models/segmentation_unet/: train.py
models/unet/: dataset.py  train.py
models/unet/utils/: dataset.py
notebooks/: center_mask.ipynb  centermask.ipynb  mask_rcnn.ipynb  pytorch_resnet18_unet.ipynb  segemntation_unet.ipynb  summary.ipynb
notebooks/.ipynb_checkpoints/: mask_rcnn-checkpoint.ipynb
notebooks/output/: metrics.json
segmentation_models_pytorch/base/: heads.py  modules.py
segmentation_models_pytorch/fpn/: decoder.py
segmentation_models_pytorch/unet/: decoder.py
tensorrt/: CMakeLists.txt  inference.cpp  infervideo.cpp  prepareData.py  simpleOnnx_1.cpp  torch2onnx.py  trtexec.cpp  trtexec_1.cpp
tensorrt/csrc/: cudaWrapper.h  engine.cpp  engine.h  ioHelper.cpp  ioHelper.h
tensorrt/gstreamer/: gst_editor.cpp  gst_rtp_test.cpp  gst_video.cpp  main.cpp  rtsp_restream_text.cpp
tensorrt/test_data_set_0/: input_0.pb  output_0.pb
